--- a/penggunaan.js.html
+++ b/penggunaan.js.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>latihan Javascript</title>'  
+    <script src="latihan1.js"></script>
 </head>
 <body>
     <h1>halo guys 😉😉</h1>
-    <script type="text/Javascript">
+    <!-- <script type="text/Javascript">
         alert("selamat pagi davin");
-    </script>
+    </script> -->
 </body>
 </html>
